<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="options">Настройки</string>
    <string name="media_library">Медиатека</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_ask">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

</resources>