<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    android:paddingStart="17dp"
    android:paddingTop="14dp"
    android:paddingEnd="15dp"
    android:paddingBottom="12dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/search"
        android:layout_marginBottom="16dp"
        android:background="@color/white"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/media_library"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/options"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        />


</LinearLayout>